--- a/section-3.css
+++ b/section-3.css
@@ -438,3 +438,71 @@
   font-weight: 700;
   line-height: 32px;
 }
+
+.pro5-img2 {
+  background-image: url(/images/pro5-2.png);
+  min-width: 480px;
+  height: 500px;
+  border-radius: 20px;
+  object-fit: cover;
+  box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.08);
+}
+
+.pro4-price-2 {
+  display: flex;
+  width: 73px;
+  height: 14px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #f5f5f7;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+}
+
+.pro5-text-3 {
+  display: flex;
+  width: 404.03px;
+  height: 66px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #fff;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+.pro5-img3 {
+  background-image: url(/images/pro5-3.png);
+  min-width: 480px;
+  height: 500px;
+  border-radius: 20px;
+  object-fit: cover;
+  box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.08);
+}
+
+.pro5-img4 {
+  background-image: url(/images/pro5-4.png);
+  min-width: 480px;
+  height: 500px;
+  border-radius: 20px;
+  object-fit: cover;
+  box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.08);
+}
+
+.pro4-price-5 {
+  color: #6e6e73;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  display: flex;
+  width: 384px;
+  height: 14px;
+  flex-direction: column;
+  justify-content: center;
+}
