--- a/section-3.css
+++ b/section-3.css
@@ -76,7 +76,7 @@
 }
 
 .product-img-1 {
-  background-image: url(/images/product1-1.png);
+  background-image: url(images/product1-1.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -112,7 +112,7 @@
 }
 
 .product-img-2 {
-  background-image: url(/images/product1-2.png);
+  background-image: url(images/product1-2.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -121,7 +121,7 @@
 }
 
 .product-img-3 {
-  background-image: url(/images/product1-3.png);
+  background-image: url(images/product1-3.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -130,7 +130,7 @@
 }
 
 .product-img-4 {
-  background-image: url(/images/product1-4.png);
+  background-image: url(images/product1-4.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -149,7 +149,7 @@
 }
 
 .product-img1 {
-  background-image: url(/images/product2-1.png);
+  background-image: url(images/product2-1.png);
   min-width: 400px;
   height: 500px;
   border-radius: 20px;
@@ -281,7 +281,7 @@
 }
 
 .product-img-3 {
-  background-image: url(/images/product3-1.png);
+  background-image: url(images/product3-1.png);
   min-width: 400px;
   height: 500px;
   border-radius: 20px;
@@ -311,7 +311,7 @@
 }
 
 .product4-img-1 {
-  background-image: url(/images/pro4-img-1.png);
+  background-image: url(images/pro4-img-1.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -350,7 +350,7 @@
 }
 
 .product4-img-4 {
-  background-image: url(/images/pro4-image-2.png);
+  background-image: url(images/pro4-image-2.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -372,7 +372,7 @@
 }
 
 .product4-img-5 {
-  background-image: url(/images/store-card-50-holiday-specialist-help-202411.png);
+  background-image: url(images/store-card-50-holiday-specialist-help-202411.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -391,7 +391,7 @@
 }
 
 .pro5-img1 {
-  background-image: url(/images/pro5-1.png);
+  background-image: url(images/pro5-1.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -440,7 +440,7 @@
 }
 
 .pro5-img2 {
-  background-image: url(/images/pro5-2.png);
+  background-image: url(images/pro5-2.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -477,7 +477,7 @@
 }
 
 .pro5-img3 {
-  background-image: url(/images/pro5-3.png);
+  background-image: url(images/pro5-3.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
@@ -486,7 +486,7 @@
 }
 
 .pro5-img4 {
-  background-image: url(/images/pro5-4.png);
+  background-image: url(images/pro5-4.png);
   min-width: 480px;
   height: 500px;
   border-radius: 20px;
